--- a/oyamel/index.html
+++ b/oyamel/index.html
@@ -15,7 +15,7 @@
          <section>
             <div class="orden-con">
                <div class="orden-info">
-                  <h2>nombre</h2>
+                  <h2>nombre1</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
                </div>
                <div class="orden-price">
@@ -29,7 +29,7 @@
             </div>
             <div class="orden-con">
                <div class="orden-info">
-                  <h2>nombre</h2>
+                  <h2>nombre 2</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
                </div>
                <div class="orden-price">
@@ -43,7 +43,7 @@
             </div>
             <div class="orden-con">
                <div class="orden-info">
-                  <h2>nombre</h2>
+                  <h2>nombre 3</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
                </div>
                <div class="orden-price">
@@ -57,7 +57,7 @@
             </div>
             <div class="orden-con">
                <div class="orden-info">
-                  <h2>nombre</h2>
+                  <h2>nombre 4</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
                </div>
                <div class="orden-price">
@@ -71,7 +71,7 @@
             </div>
             <div class="orden-con">
                <div class="orden-info">
-                  <h2>nombre</h2>
+                  <h2>nombre 5</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
                </div>
                <div class="orden-price">
@@ -85,91 +85,7 @@
             </div>
             <div class="orden-con">
                <div class="orden-info">
-                  <h2>nombre</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre</h2>
+                  <h2>nombre 6</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
                </div>
                <div class="orden-price">
@@ -185,18 +101,18 @@
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
          </section>
       </div>
+      <div class="cart">
+         <span class="icon" id="carrito">
+            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1em"
+               width="1em" xmlns="http://www.w3.org/2000/svg">
+               <path
+                  d="M922.9 701.9H327.4l29.9-60.9 496.8-.9c16.8 0 31.2-12 34.2-28.6l68.8-385.1c1.8-10.1-.9-20.5-7.5-28.4a34.99 34.99 0 0 0-26.6-12.5l-632-2.1-5.4-25.4c-3.4-16.2-18-28-34.6-28H96.5a35.3 35.3 0 1 0 0 70.6h125.9L246 312.8l58.1 281.3-74.8 122.1a34.96 34.96 0 0 0-3 36.8c6 11.9 18.1 19.4 31.5 19.4h62.8a102.43 102.43 0 0 0-20.6 61.7c0 56.6 46 102.6 102.6 102.6s102.6-46 102.6-102.6c0-22.3-7.4-44-20.6-61.7h161.1a102.43 102.43 0 0 0-20.6 61.7c0 56.6 46 102.6 102.6 102.6s102.6-46 102.6-102.6c0-22.3-7.4-44-20.6-61.7H923c19.4 0 35.3-15.8 35.3-35.3a35.42 35.42 0 0 0-35.4-35.2zM305.7 253l575.8 1.9-56.4 315.8-452.3.8L305.7 253zm96.9 612.7c-17.4 0-31.6-14.2-31.6-31.6 0-17.4 14.2-31.6 31.6-31.6s31.6 14.2 31.6 31.6a31.6 31.6 0 0 1-31.6 31.6zm325.1 0c-17.4 0-31.6-14.2-31.6-31.6 0-17.4 14.2-31.6 31.6-31.6s31.6 14.2 31.6 31.6a31.6 31.6 0 0 1-31.6 31.6z">
+               </path>
+            </svg>
+         </span>
+         <b>+</b>
+      </div>
       <div class="fondo">
-         <div class="cart">
-            <span class="icon" id="carrito">
-               <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1em"
-                  width="1em" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                     d="M922.9 701.9H327.4l29.9-60.9 496.8-.9c16.8 0 31.2-12 34.2-28.6l68.8-385.1c1.8-10.1-.9-20.5-7.5-28.4a34.99 34.99 0 0 0-26.6-12.5l-632-2.1-5.4-25.4c-3.4-16.2-18-28-34.6-28H96.5a35.3 35.3 0 1 0 0 70.6h125.9L246 312.8l58.1 281.3-74.8 122.1a34.96 34.96 0 0 0-3 36.8c6 11.9 18.1 19.4 31.5 19.4h62.8a102.43 102.43 0 0 0-20.6 61.7c0 56.6 46 102.6 102.6 102.6s102.6-46 102.6-102.6c0-22.3-7.4-44-20.6-61.7h161.1a102.43 102.43 0 0 0-20.6 61.7c0 56.6 46 102.6 102.6 102.6s102.6-46 102.6-102.6c0-22.3-7.4-44-20.6-61.7H923c19.4 0 35.3-15.8 35.3-35.3a35.42 35.42 0 0 0-35.4-35.2zM305.7 253l575.8 1.9-56.4 315.8-452.3.8L305.7 253zm96.9 612.7c-17.4 0-31.6-14.2-31.6-31.6 0-17.4 14.2-31.6 31.6-31.6s31.6 14.2 31.6 31.6a31.6 31.6 0 0 1-31.6 31.6zm325.1 0c-17.4 0-31.6-14.2-31.6-31.6 0-17.4 14.2-31.6 31.6-31.6s31.6 14.2 31.6 31.6a31.6 31.6 0 0 1-31.6 31.6z">
-                  </path>
-               </svg>
-            </span>
-            <b>1</b>
-         </div>
          <div class="logo">
             <img src="./assets/logo.png" alt="">
          </div>
