--- a/oyamel/index.html
+++ b/oyamel/index.html
@@ -13,91 +13,9 @@
             <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M400 145.49L366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49z"></path></svg>
          </span>
          <section>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre1</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre 2</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre 3</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre 4</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre 5</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <div class="orden-con">
-               <div class="orden-info">
-                  <h2>nombre 6</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cupiditate fugiat laudantium, dicta reprehenderit architecto.</p>
-               </div>
-               <div class="orden-price">
-                  <b>110</b>
-               </div>
-               <div class="orden-icon">
-                  <span class="icon">
-                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" viewBox="0 0 16 16" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM8 14.5c-3.59 0-6.5-2.91-6.5-6.5s2.91-6.5 6.5-6.5 6.5 2.91 6.5 6.5-2.91 6.5-6.5 6.5z"></path><path d="M10.5 4l-2.5 2.5-2.5-2.5-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 2.5-2.5 2.5 2.5 1.5-1.5-2.5-2.5 2.5-2.5z"></path></svg>
-                  </span>
-               </div>
-            </div>
-            <button type="button">Ordenar</button>
+            <nav></nav>
+            <p>Total: $<b>10</b></p>
+            <button type="button" id="ordenar">Ordenar</button>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
          </section>
       </div>
