--- a/oyamel/index.html
+++ b/oyamel/index.html
@@ -10,6 +10,9 @@
 
 <body>
    <div class="container">
+      <div class="bebidas" id="bebidas">
+         <h2>Agregado al carrito</h2>
+      </div>
       <div class="orden" id="orden">
          <span class="icon" id="closeOrden">
             <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em"
