--- a/oyamel/index.html
+++ b/oyamel/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="./index.css">
+   <link rel="stylesheet" href="https://portafolio.xantheapp.com/proyects/oyamel/index.css">
    <title>Restaurante Oyamel</title>
 </head>
 
@@ -149,8 +149,8 @@
    <footer>
       <p>Te gustaria tener una pagina como esta <a href="#">Contactame</a> </p>
    </footer>
-   <script src="data.js"></script>
-   <script src="code.js"></script>
+   <script src="https://portafolio.xantheapp.com/proyects/oyamel/data.js"></script>
+   <script src="https://portafolio.xantheapp.com/proyects/oyamel/index.js"></script>
 </body>
 
 </html>
