--- a/oyamel/index.html
+++ b/oyamel/index.html
@@ -25,7 +25,7 @@
          <section>
             <nav></nav>
             <p>Total: $<b>10</b></p>
-            <button type="button" id="ordenar" class="button">Ordenar a Domicilio</button>
+            <button type="button" id="ordenar" class="button">Recoger en Restaurante</button>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
          </section>
       </div>
